[package]
name = "hayaku"
version = "0.1.0"
authors = ["nokaa <nokaa@cock.li>"]

[dependencies]
chomp = "0.2.4"
log = "0.3.6"
futures = "0.1.1"
tokio-core = "0.1.0"
tokio-service = { git = "https://github.com/tokio-rs/tokio-service" }
tk-bufstream = "0.1.0"
minihttp = { git = "https://github.com/popravich/minihttp" }
regex = "0.1"

[dev-dependencies]
rand = "0.3"
env_logger = "0.3.5"
