[package]
name = "hayaku"
version = "0.1.0"
authors = ["nokaa <nokaa@cock.li>"]

[dependencies]
log = "0.3"
marksman_escape = "0.1.2"

[dependencies.cookie]
git = "https://github.com/hayaku-rs/cookie.git"

[dependencies.hayaku-http]
git = "https://github.com/hayaku-rs/hayaku-http.git"

[dependencies.hayaku-path]
git = "https://github.com/hayaku-rs/hayaku-path.git"

[dev-dependencies]
rand = "0.3"
env_logger = "0.3.5"
rustc-serialize = "0.3"
