[package]
name = "hayaku-http"
version = "0.1.0"
authors = ["nokaa <nokaa@cock.li>"]
license = "AGPLv3"
readme = "README.md"
keywords = ["futures", "async", "tokio", "web", "hayaku", "server"]
repository = "https://github.com/nokaa/hayaku"
homepage = "https://github.com/nokaa/hayaku"
description = """
An http library based on Golang's `net/http` written using Tokio and Futures.
"""

[dependencies]
log = "0.3.6"
futures = "0.1.3"
tokio-core = "0.1.0"
tokio-service = { git = "https://github.com/tokio-rs/tokio-service", rev="da47a93" }
tk-bufstream = "0.1.0"
minihttp = { git = "https://github.com/popravich/minihttp" }
regex = "0.1"
urlencoded = { git = "https://github.com/nokaa/urlencoded" }

[dependencies.multipart]
version = "0.8.1"
default-features = false
features = ["server"]

[dev-dependencies]
rand = "0.3"
env_logger = "0.3.5"
rustc-serialize = "0.3"
